# mobile-agent

./: .gitignore  CLAUDE.md  README.md  build.gradle  config-template.gradle  gradle.properties  gradlew.bat  settings.gradle
.claude/: settings.json
.github/: copilot-instructions.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: agent-not-initialized-RESOLVED.md  http-error-minus-1-RESOLVED.md  im-sender-missing.md  native-init-failed-RESOLVED.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v2.9-ROADMAP.md
.planning/research/: AGENT-TOOLS.md
agent/: android.profile  build.gradle  conanfile.py
agent-android/: build.gradle
agent-core/: android.profile  build.gradle  conan_android_toolchain.cmake  conanfile.py
agent-core/src/main/cpp/: CMakeLists.txt  android_log_sink.hpp  android_tools.cpp  native_agent.cpp
agent-core/src/main/cpp/include/icraw/: android_tools.hpp  config.hpp  mobile_agent.hpp  types.hpp
agent-core/src/main/cpp/include/icraw/core/: agent_loop.hpp  content_block.hpp  http_client.hpp  llm_provider.hpp  llm_provider_factory.hpp  log_utils.hpp  logger.hpp  memory_manager.hpp  openai_compatible_provider_base.hpp  prompt_builder.hpp  skill_loader.hpp  token_utils.hpp
agent-core/src/main/cpp/include/icraw/core/providers/: generic_openai_provider.hpp  glm_provider.hpp  minimax_provider.hpp  qwen_provider.hpp
agent-core/src/main/cpp/include/icraw/platform/android/: android_tools.hpp
agent-core/src/main/cpp/include/icraw/tools/: tool_registry.hpp
agent-core/src/main/cpp/src/: config.cpp  logger.cpp  logger_backend.hpp  logger_backend_spdlog.cpp  mobile_agent.cpp
agent-core/src/main/cpp/src/core/: agent_candidate_matcher.hpp  agent_context_manager.hpp  agent_loop.cpp  agent_memory_maintenance.cpp  agent_navigation_executor.hpp  agent_observation.hpp  agent_request_builder.hpp  agent_route_planner.hpp  agent_runtime_state.hpp  agent_runtime_utils.hpp  agent_tool_orchestrator.hpp  agent_tool_runner.cpp  curl_http_client.cpp  llm_provider.cpp  llm_provider_factory.cpp  mcp_client.cpp  memory_manager.cpp  openai_compatible_provider_base.cpp  prompt_builder.cpp  skill_loader.cpp  token_utils.cpp
agent-core/src/main/cpp/src/core/providers/: generic_openai_provider.cpp  glm_provider.cpp  minimax_provider.cpp  qwen_provider.cpp
agent-core/src/main/cpp/src/log/: logger.cpp  logger_backend.hpp  logger_backend_android.cpp
agent-core/src/main/cpp/src/platform/android/: android_tools.cpp  native_agent.cpp
agent-core/src/main/cpp/src/tools/: tool_registry.cpp
agent-core/src/test/cpp/: CMakeLists.txt  llm_provider_tests.cpp  memory_system_tests.cpp
agent-screen-vision/: README.md  build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
agent-screen-vision/contracts/: compact-page-analysis-result.schema.json  page-analysis-result.schema.json
agent-screen-vision/src/main/cpp/: CMakeLists.txt  mnn_ui_classifier_jni.cpp  mnn_ui_model_weights.h
app/: build.gradle  proguard-rules.pro
app/libs/: agent-android-debug.aar  agent-core-debug.aar  agent-screen-vision-debug.aar
benchmark-android/: build.gradle
benchmark-cases/smoke/: open_business_debug_page.json  open_discover_tab.json  open_email_tab.json  settings_change_font_size.json
benchmark-py/: README.md  pyproject.toml
benchmark-py/src/benchmark_runner/: cases.py  derive.py  device.py  main.py  runner.py
cxxplatform/: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
cxxplatform/demo/: CMakeLists.txt  main.cpp
cxxplatform/docs/: SKILLS_IMPROVEMENTS.md  memory-optimization-proposal.md
cxxplatform/include/icraw/: mobile_agent.hpp  types.hpp
cxxplatform/include/icraw/core/: http_client.hpp  llm_provider.hpp  logger.hpp  mcp_client.hpp  prompt_builder.hpp  token_utils.hpp
cxxplatform/include/icraw/tools/: tool_registry.hpp
cxxplatform/src/: config.cpp  logger.cpp  mobile_agent.cpp
cxxplatform/src/core/: agent_loop.cpp  content_block.cpp  curl_http_client.cpp  llm_provider.cpp  memory_manager.cpp  prompt_builder.cpp  skill_loader.cpp
cxxplatform/src/tools/: tool_registry.cpp
cxxplatform/test_skill_workspace/skills/test_skill/: SKILL.md
cxxplatform/tests/: CMakeLists.txt  content_block.test.cpp  mcp_client.test.cpp  memory_integration_test_design.md  memory_manager.test.cpp  memory_optimization.test.cpp  skill_loader.test.cpp  skill_loader_enhancements.test.cpp  test_memory_integration.ps1  test_skill_integration.ps1  tool_registry.test.cpp
cxxplatform/workspace/: AGENTS.md  SOUL.md  TOOLS.md
cxxplatform/workspace/skills/chinese_writer/: SKILL.md
docs/: README.md  agent-android-logging.md  agent-core-logging.md  agent-performance-guide.md  android-sdk-aarch64.md  android-skill-extension.md  android-tool-extension.md  observation-bound-execution.md  prompt-construction.md
docs/architecture/: agent-execution-optimizations.md  android-tool-architecture.md  (+12 more)
floating-ball/: build.gradle
lib/: build.gradle
scripts/: check-core-role-regressions.ps1  clear-agent-logs.bat  clear-agent-logs.ps1  download-agent-aars.sh  export-local-maven-repo.ps1  mobile-agent-clipboard-paste-dryrun.sh  mobile-agent-dryrun-tap-template.sh  mobile-agent-spinner-start-dryrun.sh  mobile-agent-spinner-stop-dryrun.sh  release-assets.sh  sync-planning-to-main-worktree.sh  sync-session-debug-transcripts.sh  sync-to-worktree.sh  worktree-copy-files.conf
tmp/: adb-raw-log.txt  agent-filtered-log.txt  latest-perf-log.txt  latest-perf-timeline.txt  logcat-tail.txt
(+853 files in other folders)
