[project]
name = "benchmark-runner"
version = "0.1.0"
description = "Minimal benchmark runner for mobile-agent"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
benchmark-runner = "benchmark_runner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_runner"]
